--- a/Hospital/src/main/resources/templates/doctor/appointments/all.html
+++ b/Hospital/src/main/resources/templates/doctor/appointments/all.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="appointments">
-    <h1><i class="fas fa-calendar-check"></i> Info</h1>
+    <h1><i class="fas fa-info-circle"></i> Info</h1>
     <table class="table table-success table-striped">
       <thead>
       <tr>
