--- a/Hospital/src/main/resources/templates/patient/appointments/cancel.html
+++ b/Hospital/src/main/resources/templates/patient/appointments/cancel.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="appointments">
-        <h1><i class="fas fa-clock"></i> Cancel Appointments</h1>
+        <h1><i class="fas fa-window-close"></i> Cancel Appointments</h1>
         <table class="table table-success table-striped">
             <thead>
             <tr>
